@@ -8,6 +8,7 @@ export("port<-")
 export("scheme<-")
 export(domain)
 export(fragment)
+export(host_extract)
 export(param_get)
 export(param_remove)
 export(param_set)
